set initial viewport width

--- a/responsive-design-lab/app/index.html
+++ b/responsive-design-lab/app/index.html
@@ -1,7 +1,8 @@
 <html lang="en">
 <head>
 
-  <!-- TODO 3 - set the visual viewport -->
+  <!-- set the visual viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Responsive Design Lab</title>
 
