--- a/responsive-images-lab/app/index.html
+++ b/responsive-images-lab/app/index.html
@@ -56,11 +56,8 @@ limitations under the License.
 
     <figure>
       <picture>
-        <source media="(min-width: 750px)"
-                srcset="images/horses-1600_large_2x.jpg 2x,
-                        images/horses-800_large_1x.jpg" />
-        <source media="(min-width: 500px)"
-                srcset="images/horses_medium.jpg" />
+        <source media="(min-width: 750px)" srcset="images/horses-1600_large_2x.jpg 2x, images/horses-800_large_1x.jpg" />
+        <source media="(min-width: 500px)" srcset="images/horses_medium.jpg" />
         <img src="images/horses_small.jpg" alt="Horses in Hawaii">
       </picture>
       <figcaption>Horses in Hawaii</figcaption>
