--- a/service-worker-lab/app/index.html
+++ b/service-worker-lab/app/index.html
@@ -44,6 +44,20 @@ limitations under the License.
 
         // TODO - 2: Regsiter the service worker
 
+        if (!('serviceWorker' in navigator)) {
+          console.log('Service worker not supported');
+          return;
+        }
+        navigator.serviceWorker.register('service-worker.js')
+        .then(function() {
+          console.log('Registered');
+        })
+        .catch(function(error) {
+          console.log('Registration failed:', error);
+        });
+
+        
+
       })();
     </script>
 
